TestRepo2/src/objects/Item_Image__c.object
<CustomObject>
    <description>POS Project: object that represents the item metadata for an catalog item image</description>
    <fields>
        <fullName>Exclude__c</fullName>
        <label>Exclude</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>File_Name__c</fullName>
        <label>File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_Types__c</fullName>
        <label>Image Types</label>
        <picklist>
            <picklistValues>
                <fullName>image</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>thumbnail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>small_image</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>ImgBase64String__c</fullName>
        <description>used only as a field for web-service call, data is never stored here.</description>
        <label>ImgBase64String</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <label>Item</label>
        <referenceTo>Item__c</referenceTo>
        <relationshipLabel>Item Images</relationshipLabel>
        <relationshipName>Item_Images</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <label>Label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Magento_File_Name__c</fullName>
        <label>Magento File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Magento_Image_URL__c</fullName>
        <label>Magento Image URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Magento_Image__c</fullName>
        <formula>IF(ISBLANK(Magento_Image_URL__c), &quot;&quot;, HYPERLINK(Magento_Image_URL__c, IMAGE(Magento_Image_URL__c, Name , 60, 60), &quot;_blank&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Magento Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mime_Type__c</fullName>
        <label>Mime Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Item Image</label>
    <nameField>
        <displayFormat>IMG-{0000000}</displayFormat>
        <label>Item Image Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Item Images</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>